Gap fix between footer and ankle

--- a/source/scss/layout/component-layout/_global_component.scss
+++ b/source/scss/layout/component-layout/_global_component.scss
@@ -1,10 +1,19 @@
+.body-content--wrapper{
+	position: relative;
+    width: 100%;
+    height: auto;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+}
+
 .contents--wrapper {
     position: relative;
     width: 100%;
     height: auto;
     padding: 0;
     margin: 0;
-    display: inline-block;
+    display: block;
 }
 
 
